...
                      Center(
                        child: Form(
                          key: _formKey,
                          child: Column(
                            children: [
                              CustomFormField(
                                key: const ValueKey('emailSignUpField'),
                                headingText: "Email",
                                hintText: "Email",
                                suffixIcon: const SizedBox(),
                                controller: _emailController,
                                maxLines: 1,
                                obscureText: false,
...
                                },
                              ),
                              const SizedBox(
                                height: 10,
                              ),
                              CustomFormField(
                                key: const ValueKey('passwordSignUpField'),
                                controller: _passwordController,
                                autoValidateMode:
                                    AutovalidateMode.onUserInteraction,
                                validator: (value) {
                                  return value != null && value.length < 6
                                      ? "Enter min. 6 characters"
...
